Fix instructions/secrets not being word wrapped properly
Closes GH-15

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -92,6 +92,10 @@ table tr {
 	border-bottom: 1px solid #ccc;
 }
 
+pre.instructions {
+	white-space: pre-wrap;
+}
+
 aside#messages {
 	margin-bottom: 1em;
 }
