--- a/www/css/main.css
+++ b/www/css/main.css
@@ -46,7 +46,7 @@ input[type="submit"] {
 	font-family: Inconsolata, "Lucida Console", Monaco, monospace;
 	border-radius: 10px;
 	padding: 10px;
-	white-space: pre;
+	white-space: pre-wrap;
 	background-color: #fee;
 	margin-bottom: 1em;
 }
@@ -77,4 +77,5 @@ textarea#secret {
 	background-color: #fee;
 	padding: 10px;
 	border-radius: 10px;
+	white-space: pre-wrap;
 }
